@@ -1,10 +1,10 @@
 package io.github.jabhijeet.schema;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.github.jabhijeet.schema.fixtures.CustomerOrderDemo;
 import io.github.jabhijeet.schema.io.AvroIO;
 import io.github.jabhijeet.schema.io.ParquetIO;
 import io.github.jabhijeet.schema.json.JsonIO;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.avro.Schema;
 import org.apache.avro.generic.GenericData;
 import org.apache.avro.generic.GenericRecord;
@@ -12,6 +12,8 @@ import org.apache.parquet.schema.MessageType;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collections;
@@ -22,54 +24,39 @@ import java.util.Set;
 import static org.assertj.core.api.Assertions.assertThat;
 
 /**
- * Visual, end-to-end demo: complex nested JSON in â†’ Avro + Parquet out.
+ * Visual + golden-fixture test: complex nested JSON in &rarr; Avro + Parquet out.
  *
- * <p>Prints each stage of the pipeline to stdout so the conversion is legible
- * when the test runs, and writes {@code customer-order.avro} and
- * {@code customer-order.parquet} to {@code target/demo-output/} so the binary
- * artifacts can be opened in external tools (e.g. {@code parquet-tools cat},
- * {@code avro-tools tojson}, or a Parquet viewer).
+ * <p>Fixtures live in {@code src/test/resources/demo-fixtures/}:
+ * <ul>
+ *   <li>{@code customer-order.input.json} &mdash; the nested input document (source of truth)</li>
+ *   <li>{@code customer-order.avsc}        &mdash; expected generated Avro schema</li>
+ *   <li>{@code customer-order.avro}        &mdash; expected Avro OCF payload</li>
+ *   <li>{@code customer-order.parquet}     &mdash; expected Parquet payload</li>
+ * </ul>
+ *
+ * <p>Binary {@code .avro} and {@code .parquet} files are <em>not</em> byte-deterministic
+ * (Avro embeds a random 16-byte sync marker; Parquet writes a {@code created_by}
+ * footer), so comparisons are done on decoded content: {@link Schema#equals} for the
+ * Avro schema, {@link GenericRecord#equals} for records read back from the stored
+ * binaries.
+ *
+ * <p>The test also re-writes the freshly-produced artifacts to
+ * {@code target/demo-output/} so they can be inspected in external viewers and
+ * promoted back into {@code src/test/resources/demo-fixtures/} when the schema
+ * mapping changes intentionally.
  */
 class ComplexJsonVisualDemoTest {
 
-    private static final String INPUT_JSON = """
-            {
-              "orderId":          "550e8400-e29b-41d4-a716-446655440000",
-              "customerName":     "Ada Lovelace",
-              "customerEmail":    "ada@example.com",
-              "totalAmount":      "1249.97",
-              "placedAt":         "2026-04-21T14:30:00Z",
-              "expectedDelivery": "2026-04-28",
-              "shippingAddress": {
-                "street":     "10 Downing St",
-                "city":       "London",
-                "postalCode": 10001
-              },
-              "billingAddress": {
-                "street":     "221B Baker St",
-                "city":       "London",
-                "postalCode": 22221
-              },
-              "items": [
-                {"sku": "BOOK-001", "productName": "The Analytical Engine", "quantity": 2, "unitPrice": "399.99"},
-                {"sku": "PEN-042",  "productName": "Fountain Pen",          "quantity": 1, "unitPrice": "49.99"},
-                {"sku": "NOTE-007", "productName": "Leather Journal",       "quantity": 4, "unitPrice": "100.00"}
-              ],
-              "tags": {
-                "channel": "web",
-                "region":  "eu-west-1",
-                "tier":    "gold"
-              },
-              "metadata": {
-                "promotions":   ["SPRING25", "LOYALTY"],
-                "giftMessages": ["Happy birthday!"],
-                "flags":        ["priority", "signature-required"]
-              }
-            }
-            """;
+    private static final String FIXTURE_DIR = "demo-fixtures/";
+    private static final String INPUT_JSON_RESOURCE = FIXTURE_DIR + "customer-order.input.json";
+    private static final String AVSC_RESOURCE       = FIXTURE_DIR + "customer-order.avsc";
+    private static final String AVRO_RESOURCE       = FIXTURE_DIR + "customer-order.avro";
+    private static final String PARQUET_RESOURCE    = FIXTURE_DIR + "customer-order.parquet";
 
     @Test
     void demo_complex_nested_json_to_avro_and_parquet() throws IOException {
+        String inputJson = readResourceAsString(INPUT_JSON_RESOURCE);
+
         Schema avroSchema = PojoSchemaGenerator.toAvro(CustomerOrderDemo.class);
         MessageType parquetSchema = PojoSchemaGenerator.toParquet(CustomerOrderDemo.class);
 
@@ -77,8 +64,8 @@ class ComplexJsonVisualDemoTest {
         // (otherwise toString() is littered with Utf8 wrappers).
         configureStringsAsString(avroSchema);
 
-        printBanner("1. INPUT JSON (complex nested document)");
-        System.out.println(prettyJson(INPUT_JSON));
+        printBanner("1. INPUT JSON (complex nested document, from test resources)");
+        System.out.println(prettyJson(inputJson));
 
         printBanner("2. GENERATED AVRO SCHEMA (from POJO via reflection)");
         System.out.println(avroSchema.toString(true));
@@ -86,7 +73,7 @@ class ComplexJsonVisualDemoTest {
         printBanner("3. GENERATED PARQUET SCHEMA (derived from Avro)");
         System.out.println(parquetSchema.toString());
 
-        GenericRecord record = JsonIO.toRecord(INPUT_JSON, avroSchema);
+        GenericRecord record = JsonIO.toRecord(inputJson, avroSchema);
         printBanner("4. AVRO GenericRecord (JSON parsed against the schema)");
         System.out.println(record);
 
@@ -104,32 +91,62 @@ class ComplexJsonVisualDemoTest {
         printBanner("7. ROUND-TRIP: record read back from Parquet bytes");
         System.out.println(roundTripped);
 
+        // Re-emit to target/ for inspection and fixture-promotion workflow.
         Path outDir = Path.of("target", "demo-output");
         Files.createDirectories(outDir);
-        Path avroOut = outDir.resolve("customer-order.avro");
-        Path parquetOut = outDir.resolve("customer-order.parquet");
-        Path schemaOut = outDir.resolve("customer-order.avsc");
-        Path jsonOut = outDir.resolve("customer-order.input.json");
-        Files.write(avroOut, avroBytes);
-        Files.write(parquetOut, parquetBytes);
-        Files.writeString(schemaOut, avroSchema.toString(true));
-        Files.writeString(jsonOut, prettyJson(INPUT_JSON));
+        Files.write(outDir.resolve("customer-order.avro"), avroBytes);
+        Files.write(outDir.resolve("customer-order.parquet"), parquetBytes);
+        Files.writeString(outDir.resolve("customer-order.avsc"), avroSchema.toString(true));
+        Files.writeString(outDir.resolve("customer-order.input.json"), prettyJson(inputJson));
 
         printBanner("8. FILES WRITTEN (open these in external viewers)");
-        System.out.println(avroOut.toAbsolutePath());
-        System.out.println(parquetOut.toAbsolutePath());
-        System.out.println(schemaOut.toAbsolutePath());
-        System.out.println(jsonOut.toAbsolutePath());
+        System.out.println(outDir.resolve("customer-order.avro").toAbsolutePath());
+        System.out.println(outDir.resolve("customer-order.parquet").toAbsolutePath());
+        System.out.println(outDir.resolve("customer-order.avsc").toAbsolutePath());
+        System.out.println(outDir.resolve("customer-order.input.json").toAbsolutePath());
 
-        // Structural sanity â€” full value assertions live in JsonIntegrationTest;
-        // here we just make sure the pipeline produced the expected shape.
-        assertThat(avroBytes).isNotEmpty();
-        assertThat(parquetBytes).isNotEmpty();
+        // ------------------------------------------------------------ golden-fixture comparisons
+
+        // (a) Avro schema matches the stored .avsc structurally.
+        Schema expectedSchema = new Schema.Parser().parse(readResourceAsString(AVSC_RESOURCE));
+        assertThat(avroSchema)
+                .as("generated Avro schema must match src/test/resources/%s", AVSC_RESOURCE)
+                .isEqualTo(expectedSchema);
+
+        // (b) Records decoded from the stored .avro match the freshly produced record.
+        GenericRecord expectedFromAvro = AvroIO.fromBytes(readResourceAsBytes(AVRO_RESOURCE));
+        assertThat(expectedFromAvro)
+                .as("record decoded from %s must match freshly generated record", AVRO_RESOURCE)
+                .isEqualTo(record);
+
+        // (c) Records decoded from the stored .parquet match the freshly produced record.
+        GenericRecord expectedFromParquet = ParquetIO.fromBytes(readResourceAsBytes(PARQUET_RESOURCE));
+        assertThat(expectedFromParquet)
+                .as("record decoded from %s must match freshly generated record", PARQUET_RESOURCE)
+                .isEqualTo(record);
+
+        // Final sanity check on the round-tripped record.
         assertThat(roundTripped.get("customerName").toString()).isEqualTo("Ada Lovelace");
         @SuppressWarnings("unchecked")
         List<GenericRecord> items = (List<GenericRecord>) roundTripped.get("items");
         assertThat(items).hasSize(3);
         assertThat(items.get(0).get("sku").toString()).isEqualTo("BOOK-001");
+    }
+
+    // ---------------------------------------------------------------- resource loading
+
+    private static String readResourceAsString(String resource) throws IOException {
+        return new String(readResourceAsBytes(resource), StandardCharsets.UTF_8);
+    }
+
+    private static byte[] readResourceAsBytes(String resource) throws IOException {
+        ClassLoader cl = ComplexJsonVisualDemoTest.class.getClassLoader();
+        try (InputStream in = cl.getResourceAsStream(resource)) {
+            if (in == null) {
+                throw new IllegalStateException("Missing test resource: " + resource);
+            }
+            return in.readAllBytes();
+        }
     }
 
     // ---------------------------------------------------------------- helpers
